--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,7 @@ header .top a {
 
 .navbar-active .Navbar_image-img {
     width: 130px;
+    height: unset;
 }
 
 @media only screen and (max-width: 990px) {
@@ -2726,7 +2727,7 @@ select {
 
 @media only screen and (max-width: 1200px) {
     .footer_image-logo {
-        width: auto;
+        /* width: auto; */
         height: auto;
         margin: 0 auto;
         display: flex;
@@ -17530,4 +17531,10 @@ a.text-dark:focus {
 .custom-line {
     width: 100% !important;
     margin-right: 0 !important;
+}
+
+@media only screen and (max-width: 992px) {
+    .black-after::after {
+        display: none
+    }
 }
