--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -810,7 +810,7 @@ fieldset {
   height: 100%;
   padding-bottom: 2rem;
   margin-left: -1rem;
-  z-index: 0;
+  z-index: -1;
 }
 
 .text-bg2{
@@ -1083,9 +1083,29 @@ fieldset {
       top: 0;
       left: 0;
       width: 100%;
-      height: 64.7rem;
+      height: 100%;
       object-fit: cover;
-      z-index: 1000000;
+      z-index: 10000;
+
+      @media only screen and (max-width: 1200px) {
+        height: 100%;
+      }
+
+      @media only screen and (max-width: 1200px) {
+        position: relative;
+        height: auto;
+        margin: 1rem 0;
+      }
+    }
+
+    &-img444{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 10000;
 
       @media only screen and (max-width: 1200px) {
         height: 100%;
@@ -1178,7 +1198,7 @@ fieldset {
       padding: 2rem 4rem;
       box-shadow: -16.2px -16.2px 23.4px 0px #00000020;
       backdrop-filter: blur(5px);
-      z-index: 10000 !important;
+      z-index: 1000000 !important;
 
       @media only screen and (max-width: 1400px) {
         left: 1rem;
@@ -1458,7 +1478,6 @@ fieldset {
   &_icons{
 
     &-img{
-      width: 8.5rem;
       height: 8.5rem;
       object-fit: cover;
       margin: 0 4rem;
@@ -1471,7 +1490,12 @@ fieldset {
       font-size: 20px;
       font-weight: 400;
       line-height: 32px;
-      text-align: center;      
+      text-align: center;   
+      white-space: nowrap;   
+
+      @media only screen and (max-width: 1700px) {
+        white-space: normal; 
+      }
     }
   }
 }
@@ -1593,22 +1617,153 @@ ul{
   color: #333;
 }
 
-.black-after{
-  &::after{
-    content: ""; /* Create an empty element for the line */
-    position: absolute;
+@keyframes draw-line {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+  50% {
+    height: 10rem;
     top: 0;
-    right: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 100%; /* Makes the line match the height of the title */
-    width: 2px; /* Set the line width */
-    background-color: #333; /* Set the color of the line */
-    z-index: 10000;
-
-    @media only screen and (max-width: 768px) {
-      display: none;
-    }
+  }
+  100% {
+    height: 10rem;
+    top: 0;
   }
 }
+
+@keyframes draw-linenn {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+  50% {
+    height: 10rem;
+    top: 0;
+  }
+  100% {
+    height: 15rem;
+    top: 2rem;
+  }
+}
+
+@keyframes draw-line2 {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+  50% {
+    height: 15rem;
+    top: 0;
+  }
+  100% {
+    height: 15rem;
+    top: 0;
+  }
+}
+
+@keyframes draw-line3 {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+  50% {
+    height: 15rem;
+  }
+  100% {
+    height: 15rem;
+    top: 5rem;
+  }
+}
+
+@keyframes draw-line4 {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+  50% {
+    height: 10rem;
+  }
+  100% {
+    height: 10rem;
+    top: -2rem;
+  }
+}
+
+@keyframes draw-line6 {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+  50% {
+    height: 100%;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+
+@keyframes draw-line11 {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+  50% {
+    height: 11rem;
+    top: -11rem;
+  }
+  100% {
+    height: 11rem;
+    top: -11rem;
+  }
+}
+
+
+.slide-up {
+  opacity: 0;
+  transform: translateY(100px);
+  transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+}
+
+.slide-up.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.slide-down {
+  opacity: 0;
+  transform: translateY(-100px);
+  transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+}
+
+.slide-down.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.spacer {
+ 
+}
+
+
+.black-after {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: -1rem;
+    height: 0;
+    width: 2px;
+    background-color: #333;
+    animation: draw-line 2s ease-in-out forwards !important;
+  }
+}
+
+
+
 
 .black-after2{
   &::after{
@@ -1616,10 +1771,11 @@ ul{
     position: absolute;
     top: -5rem;
     right: 50%; /* Adjust this to control the gap between the title and line */
-    height: 10rem; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background-color: #333; /* Set the color of the line */
     z-index: 10000;
+    animation: draw-line4 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 1440px) {
       display: none;
@@ -1635,10 +1791,11 @@ ul{
     position: absolute;
     top: 1.7rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 75%; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-line 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1653,10 +1810,11 @@ ul{
     position: absolute;
     top: 4rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 90%; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-line3 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1670,10 +1828,11 @@ ul{
     position: absolute;
     top: 0rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 75%; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-line 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1687,10 +1846,11 @@ ul{
     position: absolute;
     top: 0rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 10rem; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-line 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1705,10 +1865,11 @@ ul{
     position: absolute;
     top: 0rem;
     left: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 10rem; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-line 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1722,10 +1883,11 @@ ul{
     position: absolute;
     top: -4rem;
     left: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 15rem; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-line 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1737,12 +1899,13 @@ ul{
   &::before {
     content: ""; /* Create an empty element for the line */
     position: absolute;
-    top: -12rem;
+    top: -11rem;
     left: 85%; /* Adjust this to control the gap between the title and line */
-    height: 17%; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 100000;
+    animation: draw-line11 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1756,10 +1919,11 @@ ul{
     position: absolute;
     top: 0rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 14rem; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-line 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1773,10 +1937,29 @@ ul{
     position: absolute;
     top: 0rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
-    height: 100%; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
+    z-index: 100000;
+    animation: draw-line6 2s ease-in-out forwards !important;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
+}
+}
+
+.linear-afternn{
+  &::before {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: 0rem;
+    right: 57%; /* Adjust this to control the gap between the title and line */
+    height: 0; /* Makes the line match the height of the title */
+    width: .2rem; /* Set the line width */
+    background: linear-gradient(to bottom, #333 20%, #fff 100%); /* Gradient from black to white */
     z-index: 10000;
+    animation: draw-linenn 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1788,12 +1971,13 @@ ul{
   &::before {
     content: ""; /* Create an empty element for the line */
     position: absolute;
-    top: -15rem;
+    top: -11.5rem;
     right: -9rem; /* Adjust this to control the gap between the title and line */
-    height: 20%; /* Makes the line match the height of the title */
+    height: 0%; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 100000;
+    animation: draw-line11 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1805,12 +1989,13 @@ ul{
   &::before {
     content: ""; /* Create an empty element for the line */
     position: absolute;
-    top: -15rem;
+    top: -11.5rem;
     right: 90%; /* Adjust this to control the gap between the title and line */
-    height: 20%; /* Makes the line match the height of the title */
+    height: 0%; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 100000;
+    animation: draw-line11 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1824,10 +2009,11 @@ ul{
     position: absolute;
     top: .7rem;
     left: 0; /* Adjust this to control the gap between the title and line */
-    height: 15rem; /* Makes the line match the height of the title */
+    height: 0; /* Makes the line match the height of the title */
     width: 2px; /* Set the line width */
     background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
     z-index: 100000;
+    animation: draw-line2 2s ease-in-out forwards !important;
 
     @media only screen and (max-width: 768px) {
       display: none;
@@ -1914,7 +2100,7 @@ ul{
 .bbhr2{
   border-bottom: .2rem solid #333;
   margin-bottom: -4rem;
-  width: 70% !important;
+  width: 58% !important;
   float: center;
   margin-right: -15rem !important;
   margin-top: -5rem !important;
@@ -2983,6 +3169,9 @@ ul{
   color: #fff !important
 }
 
+.g-2{
+  gap: 2rem !important;
+}
 
 
 // Imports
